# second-brain

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  celerybeat-schedule.db  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
ai/: admin.py  apps.py  constants.py  models.py  receivers.py  tasks.py
ai/migrations/: 0001_initial.py  0002_message_requested_by.py
ai/services/: base.py  text_recognation.py
app/: __init__.py  celery.py  gunicorn.py  handlers.py  settings.py  urls.py
arbitrage/: admin.py  apps.py  forms.py  models.py  receivers.py  resources.py
arbitrage/exchanges/: binance.py
arbitrage/migrations/: 0001_initial.py  0002_alter_arbitragedealitem_close_price_and_more.py  0003_arbitragedeal_note.py  0004_exchange_created_at_exchange_updated_at_and_more.py  0005_arbitragedealitem_user.py  0006_alter_arbitragedealitem_options_and_more.py  0007_tradingpair_symbol.py  0008_alter_arbitragedeal_user_and_more.py  0009_arbitragedeal_duration_arbitragedeal_human_duration.py  0010_arbitragedeal_apr_percent_balance_balancesnapshot.py  0011_arbitragedeal_type_alter_arbitragedeal_long_and_more.py  0012_arbitragedealitem_extra_margin_and_more.py  0013_alter_arbitragedeal_type.py
arbitrage/services/: arbitrage_service.py
courses/: admin.py  apps.py  forms.py  helpers.py  inlines.py  models.py  services.py  tasks.py
courses/migrations/: 0001_initial.py  0002_alter_course_position_alter_group_course_and_more.py  0002_lesson_file_alter_course_created_at_and_more.py  0003_alter_course_position_alter_group_position_and_more.py  0004_learningprogress.py  0005_learningprogress_is_finished.py  0006_alter_course_options_alter_group_options_and_more.py  0007_alter_learningprogress_options_and_more.py  0008_link.py  0009_alter_course_position_alter_group_position_and_more.py  0010_alter_course_position_alter_group_position_and_more.py  0011_group_thumbnail.py  0012_course_thumbnail_lesson_thumbnail.py  0013_link_course_link_group_link_lesson_and_more.py
crypto/: admin.py  apps.py  forms.py  models.py  resources.py
crypto/exchanges/: base.py  binance.py
crypto/migrations/: 0001_initial.py
crypto/services/: crypto_service.py
nginx/static/: nginx.conf
notes/: admin.py  apps.py  models.py
notes/migrations/: 0001_initial.py  0002_alter_note_related_notes.py
reminders/: admin.py  apps.py  models.py  receivers.py  services.py  task_base.py  tasks.py  tasks_registry.py
reminders/migrations/: 0001_initial.py  0002_alter_reminder_data.py  0003_alter_reminder_task_class.py  0004_alter_reminder_periodic_task.py  0005_reminder_is_enabled.py
reminders/reminders_tasks/: telegram_reminder.py
requirements/: common.txt  dev.txt  prod.txt
telegram_bot/: admin.py  apps.py  constants.py  loader.py  models.py  receivers.py  signals.py  start_bot.py  tasks.py
telegram_bot/commands/: admin.py  default.py
telegram_bot/filters/: admin.py  i18n_text.py  regexp.py
telegram_bot/handlers/: __init__.py  message_handlers.py
telegram_bot/middlewares/: __init__.py  i18n.py  logging.py  throttling.py  user.py
telegram_bot/migrations/: 0001_initial.py  0002_alter_file_content_type_alter_file_created_at_and_more.py  0002_file_file_unique_id_file_mime_type.py  0003_remove_file_thumbnail_id_remove_file_title.py  0004_message.py  0005_alter_message_raw_data_alter_message_role.py  0006_file_caption.py
telegram_bot/services/: cleaner.py  courses.py  files.py  messages.py  restricted_downloader.py  text_recognation.py
telegram_bot/states/: courses.py  file.py  restricted_downloader.py
telegram_restricted_downloader/: admin.py  apps.py  helpers.py  models.py
telegram_restricted_downloader/migrations/: 0001_initial.py  0002_account_created_at_account_is_active_and_more.py  (+2 more)
users/: admin.py  apps.py  middlewares.py  models.py  services.py  validators.py
utils/: helpers.py  logging.py
workflows/: admin.py  apps.py  constants.py  manager.py  models.py  workflow.py
(+42 files in other folders)
